# BioParsers

./: .gitignore  BioParsers.cabal  README.md
app/: Main.hs
src/: BioParsers.hp  BioParsers.prof  Lib.hs  MelvinSplitMerge.rb  MergeFastq.hs  ParseGtf.hs  ParseSam.hs  ParseVcf.hs  ParsingUtils.hs  allelicVcf.md
