name:                BioParsers
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/BioParsers#readme
license:             BSD3
license-file:        LICENSE
author:              Min Zhang
maintainer:          mz1 at bcm
copyright:           2016 Min Zhang
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, ParsingUtils, MergeFastq, ParseGtf, ParseSam
  build-depends:       base >= 4.7 && < 5
                     , text>=1.2
                     , bytestring >= 0.10
                     , unordered-containers>=0.2.5
                     , safe >= 0.3
                     , containers>=0.5
                     , attoparsec >= 0.13
                     , lens >= 1.0
                     , bytestring-mmap >= 0.2
  default-language:    Haskell2010

executable BioParsers
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall 
  build-depends:       base
                     , BioParsers
  default-language:    Haskell2010

test-suite BioParsers-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , BioParsers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/BioParsers
